--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^7.1.5",
+    "babel-plugin-import-directory": "^1.0.3",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-strict-mode": "^6.24.1",
+    "babel-plugin-wildcard": "^5.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
