--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^1.0.0",
     "eslint": "^5.3.0",
     "eslint-config-google": "~0.9.1",
+    "eslint-plugin-rulesdir": "^0.1.0",
     "expose-loader": "^0.7.5",
     "file-loader": "~1.1.11",
     "filemanager-webpack-plugin": "^2.0.5",
